	PR c++/28588 	* class.c (resolve_address_of_overloaded_function): Add 	access_path parameter.  Perform access checks. 	(instantiate_type): Adjust call to 	resolve_address_of_overloaded_function.  Remove unnecessary code. 	* tree.c (is_overloaded_fn): Document.  Return 2 when there are 	acutally multiple functions. 	(really_overloaded_fn): Use is_overloaded_fn. 	* mangle.c (write_expression): Handle BASELINKs. 	* cp-tree.h (really_overloaded_fn): Return bool. 	(baselink_for_fns): Declare. 	* search.c (lookup_member): Check access for single static 	functions here. 	* pt.c (convert_nontype_argument_function): Handle BASELINKs. 	(tsubst_copy_and_build): Generate BASELINKs for template-ids. 	* semantics.c (finish_call_expr): Use baselink_for_fns. 	(baselink_for_fns): New function. 	(finish_id_expression): Use it. 	* parser.c (cp_parser_template_argument): Don't strip BASELINKs. 	PR c++/28595 	* pt.c (tsubst): Issue errors about attempts to create VLAs at 	template-instantiation time. 	PR c++/28588 	* g++.dg/inherit/access6.C: New test. 	* g++.dg/inherit/access7.C: Likewise. 	PR c++/28595 	* g++.dg/template/array15.C: New test. 	* g++.dg/template/crash2.C: Tweak error markers.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116468 138bc75d-0d04-0410-961f-82ee72b054a4